# zeptowiki

./: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.status  configure  configure.ac  didiwiki.1  didiwiki.conf  finish_install.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
docs/: BUGS  CIWIKI_ON_USBDRIVE  FAQ_HELP  FIRST  HOWTOLOGIN  IMAGES_and_ZIP  MAILINGCODE  MYSERVER  PAGESTYLES  PERMISSION_FILES  README
scripts/: activity.sh  backup_wiki.sh  inet_adr.sh  inetadress.sh  kill_wiki.sh  notifynewuser.sh
src/: Makefile  Makefile.am  Makefile.in  didi.c  didi.h  http.c  http.h  util.c  util.h  wiki.c  wiki.h  wikiashtml.c  wikichanges.c  wikientries.c  wikilogin.c  wikitext.h
src/.deps/: didi.Po  http.Po  util.Po  wiki.Po  wikiashtml.Po  wikichanges.Po  wikientries.Po  wikiform.Po  wikilogin.Po
